--- a/nginx_custom.conf
+++ b/nginx_custom.conf
@@ -23,7 +23,7 @@ events{}
                 index index.php index.html;
 
                 ssl_certificate /etc/nginx/ssl/self.crt;
-                ssl_key_certificate /etc/nginx.ssl/self.key;
+                ssl_key_certificate /etc/nginx/ssl/self.key;
 
                 set $weekend 'No';
 
